Construct BSONObjBuilder under the DBPrimaryRouter lambda function on ClusterCleanupStructuredEncryptionDataCmd

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.3.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Catalog and Routing
    • Fully Compatible
    • ALL
    • CAR Team 2025-08-04
    • 200
    • 🟩 Routing and Topology
    • None
    • None
    • None
    • None
    • None
    • None

      The BSONObjBuilder is initialized outside the router role loop and finalized on the first iteration of the router role. Therefore, if the operation gets retried when the router is stale, we'll hit a segmentation fault here because the BSONObjBuilder is no longer valid.

            Assignee:
            Silvia Surroca
            Reporter:
            Silvia Surroca
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: