SERVER-108492 Construct BSONObjBuilder under the DBPrimaryRouter lambda function on ClusterCleanupStructuredEncryptionDataCmd (#39437)

GitOrigin-RevId: 5ec17c16f28025972545f772c0ac0f1653eb5d6c