src/mongo/s/commands/cluster_fle2_cleanup_cmd.cpp
@@ -119,22 +119,22 @@ Cmd::Reply Cmd::Invocation::typedRun(OperationContext* opCtx) {
     auto req = request();
     generic_argument_util::setMajorityWriteConcern(req, &opCtx->getWriteConcern());
 
-    // Rewrite command verb to _shardSvrCleanupStructuredEnccryptionData.
-    auto cmd = req.toBSON();
-    BSONObjBuilder reqBuilder;
-    for (const auto& elem : cmd) {
-        if (elem.fieldNameStringData() == Request::kCommandName) {
-            reqBuilder.appendAs(elem, "_shardsvrCleanupStructuredEncryptionData");
-        } else {
-            reqBuilder.append(elem);
-        }
-    }
-
     sharding::router::DBPrimaryRouter router(opCtx->getServiceContext(), nss.dbName());
     return router.route(
         opCtx,
         Request::kCommandName,
         [&](OperationContext* opCtx, const CachedDatabaseInfo& dbInfo) {
+            // Rewrite command verb to _shardSvrCleanupStructuredEnccryptionData.
+            auto cmd = req.toBSON();
+            BSONObjBuilder reqBuilder;
+            for (const auto& elem : cmd) {
+                if (elem.fieldNameStringData() == Request::kCommandName) {
+                    reqBuilder.appendAs(elem, "_shardsvrCleanupStructuredEncryptionData");
+                } else {
+                    reqBuilder.append(elem);
+                }
+            }
+
             auto response = uassertStatusOK(
                 executeCommandAgainstDatabasePrimaryOnlyAttachingDbVersion(
                     opCtx,
